# BMP-Sketcher

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh
benchmarks/: BMPFile.cpp  main.cpp
include/: example.hpp
scripts/: build.sh  clean.sh  run.sh  test.sh
src/: BMPFile.cpp  BMPProcessor.cpp  example.cpp  main.cpp
src/Strategy/: DrawCrossStrategy.cpp  DrawCrossThreadStrategy.cpp
tests/: test_BMPFile.cpp  test_example.cpp
